--- a/README.ORG
+++ b/README.ORG
@@ -1,4 +1,4 @@
-#+Title: DNS BIND Jumpstart Training
+#+Title: DNS BIND 9 Starter Training
 #+Author: Jan-Piet Mens & Carsten Strotmann
 #+Date: <2026-02-04 Wed>
 #+Language: de
